service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apim-service
  namespace: apim
spec:
  selector:
    app: apim-app
  ports:
    - name: port-8280
      protocol: TCP
      port: 8280
      targetPort: 8280
    - name: port-8443
      protocol: TCP
      port: 8443
      targetPort: 8443
    - name: port-9763
      protocol: TCP
      port: 9763
      targetPort: 9763
    - name: port-9443
      protocol: TCP
      port: 9443
      targetPort: 9443
    # - protocol: TCP
    #   port: 8443
    #   targetPort: 8443
